k8s-manifest-files/yolo5.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo5-deployment
spec:
  selector:
    matchLabels:
      app: yolo5
  replicas: 1 # Update the replicas from 2 to 4
  template:
    metadata:
      labels:
        app: yolo5
    spec:
      containers:
        - name: yolo5
          image: swati1010/yolo5
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: yolo5-service
spec:
  selector:
    app: yolo5
  ports:
    - port: 8081
      targetPort: 8081
