k8s-manifest-files/fronetend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fronetend
spec:
  rules:
  - host: swati-fronetend.upes-int-devops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8082
  ingressClassName: nginx
